<resources>
    <string name="app_name">Weather Alarm Clock</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="label">Label</string>
    <string name="x">X</string>
    <string name="no_alarms_found">No alarms found</string>
    <string name="add_alarm">Add alarm</string>
    <string name="weather">Weather</string>
    <string name="time_separator">:</string>
    <string name="weather_activity_title">Weather Forecast</string>
    <string name="sync_now">Sync Now</string>
    <string name="no_records">No records</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="logout">Logout</string>
</resources>
